# django-email-test

./: .env.example  .gitignore  CLAUDE.md  LICENSE  LICENSE.md  README.md  gunicorn_config.py  pyproject.toml
.claude/: settings.local.json
config/: settings.py  urls.py
deploy/: DEPLOYMENT.md  deploy.sh  email-test-poc.service
email_test/: apps.py  urls.py  views.py
email_test/management/commands/: check_smtp_cert.py  send_test_email.py
